--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
    <hr />
    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
    <img src="./assets/images/Peter Movie Rankking.png" height="200" alt="Movie project image" />
-   <h3><a href="./public/contact.html">Birthday Invite Project</a></h3>
+   <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
    <img src="./assets/images/Peter Birthday invite.png" height="200" alt="Birthday Project image" />
    <hr />
    <a href="./public/about.html">About Me</a>
