--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
  </head>
  <body>
    <h1>Peter John's Portfolio</h1>
-   <h2>I am Web Developer</h2>
+   <h2>I am a Web Developer</h2>
    <hr />
    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
    <img src="./assets/images/Peter Movie Rankking.png" height="200" alt="Movie project image" />
