Fix Typo on the page about.html

--- a/public/about.html
+++ b/public/about.html
@@ -1,2 +1,2 @@
 <h1>About Me</h1>
-<p>Creative and results-driven Web Developer skilled in building responsive, user-friendly websites and web applications. Proficient in HTML, CSS, JavaScript, and modern frameworks, with a focus on delivering high-quality, scalable solutions that meet client needs and enhance user experience.</p>
+<p>Versatile Web Developer with a strong foundation in HTML, CSS, and JavaScript, and hands-on experience with modern frameworks like React. Passionate about building responsive, visually appealing, and user-friendly websites that merge clean design with efficient functionality. Eager to contribute creativity, problem-solving skills, and technical expertise to deliver impactful digital solutions in a collaborative environment.</p>
